deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nrl-app
  labels:
    app: nrl-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nrl-app
  template:
    metadata:
      labels:
        app: nrl-app
    spec:
      containers:
      - name: nrl-app-container
        image: 090814668573.dkr.ecr.ap-south-2.amazonaws.com/nrl-internal:21
        ports:
        - containerPort: 80
