ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrl-app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb" # Use ALB
    alb.ingress.kubernetes.io/scheme: "internet-facing" # Internet-facing ALB
    alb.ingress.kubernetes.io/target-type: "ip" # Target type for pods
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # Listener port configuration
    alb.ingress.kubernetes.io/healthcheck-path: "/" # Health check path for ALB
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port" # Use traffic port for health checks
    alb.ingress.kubernetes.io/success-codes: "200-399" # Expected success response codes
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nrl-app-service
                port:
                  number: 80
